# ansible-deploy-docker-compose-template

./: .gitignore  .gitlab-ci.yml  README.md  copier.yml  create_compose_models.sh  lint.sh  pyproject.toml  release.sh
defaults/: main.yml
extensions/: dc_to_ansible.py
meta/: main.yml
scripts/: dc.py  dc_to_ansible.py  output_model.py  requirements.txt
tasks/: main.yml
templates/: README.md  README.md.j2  [% if molecule_docker_test %]pyproject.toml[% endif %].j2  [% if not remove_cli_artefact %]cli_output.json[% endif %].j2  [% if standalone_role %]LICENSE[% endif %].j2  [[_copier_conf.answers_file]].j2  defaults.yml  fix_yaml.sh  handlers.yml  playbook.example.yml  playbook.example.yml.j2  vars.yml
templates/[% if molecule_docker_test %]molecule[% endif %]/default/: converge.yml.j2  molecule.yml.j2  prepare.yml.j2
templates/[% if standalone_role %]meta[% endif %]/: main.yml.j2
templates/[% if standalone_role%]meta[% endif %]/: main.yml.j2
templates/defaults/: main.yml.j2
templates/handlers/: main.yml.j2
templates/molecule/default/: converge.yml  vars.yml.j2
templates/tasks/: install.yml  install.yml.j2  main.yml  remove.yml  remove.yml.j2  run_cmds.yml
templates/templates/: docker-compose.yml.j2
tests/: conftest.py  test.yml  test_pb.yml  test_script.py  test_template.py
tests/fixtures/: minio.yml  nginx-proxy-acme.yml  pihole.yml  wg-easy.yml  wikijs.yml
tests/fixtures/config/: minio.env
vars/: main.yml
