[tool.poetry]
name = "dc-to-ansible"
version = "1.2.1"
description = ""
authors = ["PonyM <dev@lksch.ch>"]
license = "MIT"
readme = "README.md"
packages = [{include = "scripts"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.4"
click = "^8.1.7"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
click = "^8.1.7"
pyyaml = "^6.0.1"
datamodel-code-generator = {extras = ["http"], version = "^0.25.5"}
ansible = "^9.4.0"

[tool.poetry.scripts]
dc-to-ansible = "scripts.dc_to_ansible:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
