[tool.poetry]
name = "dc-to-ansible"
version = "1.3.3"
description = ""
authors = ["PonyM <dev@lksch.ch>"]
license = "MIT"
readme = "README.md"
packages = [{include = "scripts"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
datamodel-code-generator = {extras = ["http"], version = "^0.25.5"}
copier = "^9.6.0"
pytest-copie = "^0.2.1"
copier-templates-extensions = "^0.3.1"
ruff = "^0.11.2"

[tool.poetry.scripts]
dc-to-ansible = "scripts.dc_to_ansible:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
include = ["extensions", "tests"]
